implementation Effect interface with TransformationFixed, ArbitraryBasic, EffectOr and unit tests